Login Screen created
demo daten

name: admin
pw: admin

--- a/ShelfSpace-Frontend/HTML/SearchView.html
+++ b/ShelfSpace-Frontend/HTML/SearchView.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="ShelfSpace.css">
+  <link rel="stylesheet" href="../CSS/ShelfSpace.css">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
 <button id="backButton" style="display: none;">back to search</button>
 <ul id="resultsList"></ul>
 
-<script src="ShelfSpace.js"></script>
+<script src="../JavaScript/SearchView.js"></script>
 </body>
 
 </html>
