--- a/ShelfSpace-Frontend/HTML/SearchView.html
+++ b/ShelfSpace-Frontend/HTML/SearchView.html
@@ -15,6 +15,7 @@
   </div>
   <br>
   <button class="button-10" role="button" id="searchButton">search</button>
+  <button id="backToAccountButton">back to login</button>
 </div>
 
 <!-- Zurück-Button -->
