--- a/ShelfSpace-Frontend/HTML/AccountHandling.html
+++ b/ShelfSpace-Frontend/HTML/AccountHandling.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 <div id="login-container">
-    <h1 id="login-title">ShelfSpace Login</h1>
+    <h1 id="login-title">Welcome to ShelfSpace</h1>
     <form id="loginForm">
         <input type="text" id="username" placeholder="Benutzername eingeben" required>
         <input type="password" id="password" placeholder="Passwort eingeben" required>
-        <button type="submit" id="loginButton">Login</button>
+        <button type="submit" id="loginButton">login</button>
+        <br>
+
+        <button type="sign up" id="signUpButton">sign up</button>
     </form>
     <p id="error-message" class="hidden">Benutzername oder Passwort ist falsch.</p>
 </div>
