--- a/ShelfSpace-Frontend/HTML/SearchView.html
+++ b/ShelfSpace-Frontend/HTML/SearchView.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <div id="centered-content">
-  <h1 id="shelfspace-title">Welcome to Shelfspace</h1>
+
   <div class="form">
     <input class="input" type="text" id="titleInput" placeholder="search for a titel">
     <span class="input-border"></span>
+    <button class="button-10" role="button" id="searchButton">search</button>
   </div>
   <br>
-  <button class="button-10" role="button" id="searchButton">search</button>
-  <button id="backToAccountButton">back to login</button>
+  <button id="backToShelfspace">back to Shelfspace</button>
 </div>
 
 <!-- Zurück-Button -->
