kleine css Verbesserungen
kleine css Verbesserungen

--- a/ShelfSpace-Frontend/HTML/SearchView.html
+++ b/ShelfSpace-Frontend/HTML/SearchView.html
@@ -13,9 +13,10 @@
     <input class="input" type="text" id="titleInput" placeholder="search for a titel">
     <span class="input-border"></span>
     <button class="button-10" role="button" id="searchButton">search</button>
+    <button id="backToShelfspace">go back</button>
   </div>
   <br>
-  <button id="backToShelfspace">back to Shelfspace</button>
+
 </div>
 
 <!-- Zurück-Button -->
