--- a/ShelfSpace-Frontend/HTML/SearchView.html
+++ b/ShelfSpace-Frontend/HTML/SearchView.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../CSS/SearchView.css">
-
 </head>
 <body>
 <div id="centered-content">
@@ -23,6 +22,22 @@
 <button id="backButton" style="display: none;">back to search</button>
 <ul id="resultsList"></ul>
 
+<!-- Modal für die Detailansicht -->
+<div id="bookModal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2 id="modalTitle">Buchtitel</h2>
+      <span class="modal-close" onclick="closeModal()">&times;</span>
+    </div>
+    <div class="modal-body">
+      <img id="modalCover" src="" alt="Buchcover"/>
+      <p><span><strong>Autoren:</strong></span> <span id="modalAuthors"></span></p></br>
+      <p><span><strong>Veröffentlichungsdatum:</strong></span> <span id="modalPublishedDate"></span></p></br>
+      <p><span><strong>Seitenanzahl:</strong></span> <span id="modalPageCount"></span></p></br>
+      <p><span><strong>Beschreibung:<br/></strong></span> <span id="modalDescription"></span></p>
+    </div>
+  </div>
+</div>
 <script src="../JavaScript/SearchView.js"></script>
 </body>
 
