Backend Login/Speichern von Login
Ich check net was es macht aber wird schon klappen

--- a/ShelfSpace-Frontend/HTML/AccountHandling.html
+++ b/ShelfSpace-Frontend/HTML/AccountHandling.html
@@ -14,8 +14,7 @@
         <input type="password" id="password" placeholder="Passwort eingeben" required>
         <button type="submit" id="loginButton">login</button>
         <br>
-
-        <button type="sign up" id="signUpButton">sign up</button>
+        <button type="button" id="signUpButton">sign up</button>
     </form>
     <p id="error-message" class="hidden">Benutzername oder Passwort ist falsch.</p>
 </div>
