HomePage umbenannt und den username oben entfernt

--- a/ShelfSpace-Frontend/HTML/HomePage.html
+++ b/ShelfSpace-Frontend/HTML/HomePage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Übersichtsseite</title>
-  <link rel="stylesheet" href="../CSS/OverviewPage.css">
+  <link rel="stylesheet" href="../CSS/HomePage.css">
 </head>
 <body>
 <div id="container">
@@ -56,6 +56,6 @@
   </div>
 </div>
 
-<script src="../JavaScript/OverviewPage.js"></script>
+<script src="../JavaScript/HomePage.js"></script>
 </body>
 </html>
