Test might delete later on

--- a/ShelfSpace-Frontend/HTML/HomePage.html
+++ b/ShelfSpace-Frontend/HTML/HomePage.html
@@ -39,7 +39,8 @@
         <!-- Buchregal mit Büchern -->
         <div class="bookshelf">
           <!-- Beispiel Bücher (später dynamisch hinzufügen) -->
-          <div class="book">Book 1</div>
+          <div class="book">
+          </div>
           <div class="book">Book 2</div>
           <div class="book">+ Add book</div>
         </div>
