Frontend Bücher hinzufügen
Entsprechendes Frontend :)

--- a/ShelfSpace-Frontend/HTML/HomePage.html
+++ b/ShelfSpace-Frontend/HTML/HomePage.html
@@ -34,24 +34,7 @@
 
     <!-- Bücherregale anzeigen -->
     <div id="shelves">
-      <div class="shelf">
-        <h3>Reading</h3>
-        <!-- Buchregal mit Büchern -->
-        <div class="bookshelf">
-          <!-- Beispiel Bücher (später dynamisch hinzufügen) -->
-          <div class="book">Book 1</div>
-          <div class="book">Book 2</div>
-          <div class="book">+ Add book</div>
-        </div>
-      </div>
-      <div class="shelf">
-        <h3>To read</h3>
-        <div class="bookshelf">
-          <div class="book">Book 3</div>
-          <div class="book">Book 4</div>
-          <div class="book">+ Add book</div>
-        </div>
-      </div>
+      <!-- Regale werden dynamisch hier eingefügt -->
     </div>
   </div>
 </div>
