--- a/ShelfSpace-Frontend/HTML/HomePage.html
+++ b/ShelfSpace-Frontend/HTML/HomePage.html
@@ -10,12 +10,10 @@
 <div id="container">
   <!-- Linke Seitenleiste -->
   <div id="sidebar">
-    <h2>Menu</h2>
+    <h2>ShelfSpace</h2>
     <ul>
-      <li>My books</li>
-      <li>Goals</li>
-      <li>Statistics</li>
-      <li>Search</li>
+      <li><a href="HomePage.html">My books</a></li>
+      <li ><a href="SearchView.html">Search</a></li>
     </ul>
     <!-- Log out Button -->
     <button id="backToAccountButton">Log out</button>
